<resources>
    <string name="app_name">ispAdminAndroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="label" />
    <string name="title_activity_main2">MainActivity2</string>
    <string name="plan">Plan</string>
    <string name="networkdevice">Dispositivo De Red</string>
    <string name="login_Error_Tittle">Ocurrio un Error</string>
    <string name="menu_plan">Plan</string>
    <string name="menu_device">Equipos</string>
    <string name="menu_subscription">Subscripcion</string>
    <string name="menu_see_subscriptions">Ver Suscripciones</string>
    <string name="abreviatura">Abreviatura</string>
    <string name="nombre">Nombre</string>
    <string name="lugar">Lugar</string>
    <string name="codigo">Codigo</string>
    <string name="direccion">Direccion</string>
    <string name="registrar">REGISTRAR</string>
    <string name="registrar_ubicacion">Registrar Ubicacion</string>
    <string name="registrar_tecnicos">Registrar tecnicos</string>
    <string name="registrar_caja_nap">Registrar caja nap</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="crear_datos">Crear Datos</string>
    <string name="fecha_de_creaci_n">Fecha de creación</string>
    <string name="fecha_de_atenci_n">Fecha de atención</string>
    <string name="ver_orden_de_servicios">Ver Orden de Servicios</string>
    <string name="registrar_orden_de_servicio">Registrar Orden de Servicio</string>
    <string name="ver_t_cnicos">Ver Técnicos</string>


</resources>