<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_plan"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_plan" />
        <item
            android:id="@+id/nav_device"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_device" />
        <item
            android:id="@+id/nav_subscription"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/menu_subscription" />
        <item
            android:id="@+id/nav_see_subscriptions"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/menu_see_subscriptions" />
        <item
            android:id="@+id/nav_to_register"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/registrar_ubicacion" />
        <item
            android:id="@+id/nav_to_register_technician"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/registrar_tecnicos" />
        <item
            android:id="@+id/nav_to_register_nap_box"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/registrar_caja_nap" />
        <item
            android:id="@+id/nav_to_register_service_order"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="Registrar Orden de Servicio" />

    </group>
</menu>